Some missed numbers valueOf usages.
Use valueOf methods to combine parsing and creating the object and use
the jvm cache if possible.

Change-Id: I91c0d36f8e7ffe68a743373210289406c5617053
Reviewed-on: https://git.eclipse.org/r/7493
Tested-by: Hudson CI
Reviewed-by: Camilo Bernal <cabernal@redhat.com>
IP-Clean: Camilo Bernal <cabernal@redhat.com>
Tested-by: Camilo Bernal <cabernal@redhat.com>